examples/citrix-adc-in-istio/bookinfo/deployment-yaml/productpage_dr.yaml
---
# Source: bookinfo-citrix-ingress/templates/productpage_dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: productpage-dr
spec:
  host: productpage

---
